# cartera

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt  README.md  main.cpp  resources.qrc
src/contents/code/: backend.js
src/contents/ui/: main.qml  searchpage.qml
src/contents/ui/search/: SearchDialog.qml  SearchItemDelegate.qml  SearchPage.qml
src/contents/ui/watch/: DetailsPage.qml  WatchListItem.qml  WatchListPage.qml  WatchListSelectionPage.qml
src/core/: CMakeLists.txt
src/core/book/: book.cpp  position.cpp  transaction.cpp  transaction.h
src/core/config/: jsonconfigurator.cpp  jsonconfigurator.h
src/core/feed/: abstractfeed.cpp  abstractfeed.h  api.cpp  api.h  basicfeed.cpp  basicfeed.h  feedreplyprivate.cpp  feedreplyprivate.h  feedrepository.cpp  feedrepository.h  jsonparser.cpp  jsonparser.h  yahoofinancefeed.cpp  yahoofinancefeed.h
src/core/http/: client.cpp  client.h
src/core/parser/: jsonparser.cpp  jsonparser.h
src/core/tests/: CMakeLists.txt  basicfeed.t.cpp  feedapi.t.cpp  httpclient.t.cpp  jsonconfigurator.t.cpp  jsonparser.t.cpp
src/core/tests/fixture/: 0P00006AA4.TW.json  BTCUSDT_24hr.json  ETH-USD.json  ETHUSDT_exchangeInfo.json  IBM.json  IBM_detail.json  SPX_detail.json  exchangeInfo.json  yh_quotes.json
src/core/tests/fixture/sample_config/: watchlists.json
src/core/types/: exceptions.h  feedsource.cpp  feedsource.h  financialinstrument.cpp  financialinstrument.h  positionidentifier.cpp  positionidentifier.h
src/coreqt/: CMakeLists.txt  backend.cpp  backend.h  types.cpp  types.h
src/coreqt/types/: symboldetails.cpp  symboldetails.h  symbolquote.cpp  symbolquote.h  types.cpp  types.h
src/lib/: CMakeLists.txt
src/lib/book/: book.h  position.h
src/lib/feed/: abstractfeed.cpp  abstractfeed.h  feedreplyprivate.cpp  feedreplyprivate.h  feedrepository.cpp  feedrepository.h  financialinstrument.cpp  financialinstrument.h  yahoofinancefeed.cpp  yahoofinancefeed.h
src/tests/: IBM.json
